pkg/config/analysis/analyzers/testdata/gateway-secrets-validation.yaml
apiVersion: v1
data:
  cert: aHVzaCBodXNoIGh1c2gK
  key: c2VjcmV0IHNlY3JldAo=
kind: Secret
metadata:
  name: invalid-key
  namespace: istio-system
type: Opaque
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: defaultgateway-invalid-keys
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "invalid-key" # wrong key names, should have one error
      hosts:
        - "httpbin.example.com"
---
apiVersion: v1
data:
  tls.cert: aHVzaCBodXNoIGh1c2gK
kind: Secret
metadata:
  name: missing-key
  namespace: istio-system
type: kubernetes.io/tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: defaultgateway-missing-keys
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "missing-key" # missing keys, should have one error
      hosts:
        - "httpbin.example.com"
---
apiVersion: v1
data:
  tls.cert: aHVzaCBodXNoIGh1c2gK
  tls.key: c2VjcmV0IHNlY3JldAo=
kind: Secret
metadata:
  name: invalid-cert
  namespace: istio-system
type: kubernetes.io/tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: defaultgateway-invalid-cert
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "invalid-cert" # cert content is invalid, should have one error
      hosts:
        - "httpbin.example.com"
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5akNDQWJLZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFLRXdwTGRXSmwKY201bGRHVnpNQjRYRFRJek1ETXhOREF5TlRRek1Gb1hEVEl6TURNeE5EQTJNVFUwTVZvd0ZURVRNQkVHQTFVRQpDaE1LUzNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWZaClJaMzZhVW5tMlA1SEROUHFabExTVWpVL2Mxam9YUlVSNkJkMDVOWnhYT0lUNkNuY1pwRXhOUjhTc2l4Zis1WkMKbGxhSUtoSjhPQUVHc09LN3RhbTNDWUl3UjBpYlV4LytzTk9VR05hTHVmYkZVRXZNWVZQM3NoenpVMVpQWXhCQgpEVkZyaUR0bTQ5c3NQN [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREc5MWNpYXBrTm1udW0KR1VFdEhwSVlrS0xkaW1ESlFRWlE5bGVJVkhwMzlxR2lwT0tvLzZLQnRmOGl2Z1BZZW04OFZKL2N0WkYzT0w0Qgp4ditocElBVTdPTkxRSGJEb1VKUGxTSkpJdE5zcC95UHE3SU40Y1BiYSsxWktmYWo2UFNZTHozM3ZjMktoZ1cxCnNxbXF4MGdsUUdrQVlEUjBzdmQreWFDaVEvaExqbWxjMjVFMWw3a2NZYklNRThnZG1LeTduQ1FCSnZIYjlLdWwKTXdHLzdyNWx3VTIwVHRBYStqeCt6aWREeEdFNFdhTERYWmtycWtsMUhwM3pvMUk2NXhQalNlMHhGbTlHQTlkRgpGazVuczhYbGxQOUNhc [...]
kind: Secret
metadata:
  name: expired-secret
  namespace: istio-system
type: kubernetes.io/tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: defaultgateway-expired
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "expired-secret" # the cert is expired, should generate errors
      hosts:
        - "httpbin.example.com"
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJHRENCdmdJSkFNNDNtRHd3VGExdk1Bb0dDQ3FHU000OUJBTUNNQlF4RWpBUUJnTlZCQU1NQ1dsemRHbHYKTG1OdmJUQWVGdzB5TXpBMk1Ea3dPVEUxTURsYUZ3MHlOREEyTURnd09URTFNRGxhTUJReEVqQVFCZ05WQkFNTQpDV2x6ZEdsdkxtTnZiVEJaTUJNR0J5cUdTTTQ5QWdFR0NDcUdTTTQ5QXdFSEEwSUFCR0I5N1pIVEY1S2Y3YnIxCjJoK0VlNk9RUitGQTVaYWJXbkNyTWxyWFd3NXl6OHRobjM4bDhwMVBrRXZUajV6R281TDNMSHh0VDV0a1E2c1gKejY2UTUxTXdDZ1lJS29aSXpqMEVBd0lEU1FBd1JnSWhBSkNVTkZtRkQ5cFE4YWliN3h0TUNTeFpVN3BGZjlURgoyMzkrbjFZeVZyUk9Ba [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREc5MWNpYXBrTm1udW0KR1VFdEhwSVlrS0xkaW1ESlFRWlE5bGVJVkhwMzlxR2lwT0tvLzZLQnRmOGl2Z1BZZW04OFZKL2N0WkYzT0w0Qgp4ditocElBVTdPTkxRSGJEb1VKUGxTSkpJdE5zcC95UHE3SU40Y1BiYSsxWktmYWo2UFNZTHozM3ZjMktoZ1cxCnNxbXF4MGdsUUdrQVlEUjBzdmQreWFDaVEvaExqbWxjMjVFMWw3a2NZYklNRThnZG1LeTduQ1FCSnZIYjlLdWwKTXdHLzdyNWx3VTIwVHRBYStqeCt6aWREeEdFNFdhTERYWmtycWtsMUhwM3pvMUk2NXhQalNlMHhGbTlHQTlkRgpGazVuczhYbGxQOUNhc [...]
kind: Secret
metadata:
  name: malformed-secret
  namespace: istio-system
type: kubernetes.io/tls
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: defaultgateway-malformed
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway, so we expect the credential in istio-system
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "malformed-secret" # the cert is malformed, should generate errors
    hosts:
    - "httpbin.example.com"
